--- a/base_file/place.html
+++ b/base_file/place.html
@@ -7,23 +7,53 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <img src="images/logo.png" alt="Logo" class="logo">
+        <nav>
+        <a href="login.html" class="login-button">Login</a>
+        <a href="index.html" id="inicio-link" class="inicio-button">Home</a>
+        </nav>
+    </header>
     <main>
-        <section id="place-details">
-            <!-- Place details will be populated dynamically -->
+        <section id="place-details" class="place-details">
+            <h2>Playa Pesquero</h2>
+            <img src="images/place1.jpg" alt="place1 Image" class="place-image-large">
+            <!--The info of the place-->
+            <div class="place-info">
+                <h2><strong>John Doe:</strong></h2>
+                <p>Price: $100 per night</p>
+                <p>Location: Cuba</p>
+                <p>Description: A wonderful Hotel in a wonderful place.</p>
+                <p>Amenities: WiFi, Pool, Gym, Spa, Beach...</p>
+            </div>
         </section>
+        <!--Reviews section-->
         <section id="reviews">
-            <!-- Reviews will be populated dynamically -->
+            <a href="add_review.html"><button>Add a Review</a>
+        </section>
+            <div class="review-card">
+                <p><strong>Comment:</strong> Mijn oprechte respect, een luxe hotel.</p>
+                <p><strong>User:</strong>Mr. Whelmoed</p>
+                <p>Rating: 5.0</p>
+            </div>
+            <div class="review-card">
+                <p><strong>Comment:</strong> Het is een prachtige plek, vol leven, met prachtige stranden, een prachtig uitzicht, uitstekende service, onstuitbare voorzieningen.</p>
+                <p>User: Mr. Whelmoed</p>
+                <p>Rating: 5.0</p>
+            </div>
         </section>
         <section id="add-review">
             <h2>Add a Review</h2>
-            <form id="review-form">
+            <form id="review-form" class="add-review">
                 <label for="review-text">Review:</label>
                 <textarea id="review-text" name="review-text" required></textarea>
-                
                 <button type="submit">Submit</button>
             </form>
         </section>
     </main>
     <script src="scripts.js"></script>
+    <footer>
+        <p><em>This is a Holberton School project. All rights reserved.</em></p>
+    </footer>
 </body>
 </html>
