--- a/base_file/index.html
+++ b/base_file/index.html
@@ -54,7 +54,7 @@
         </section>
     </main>
     <footer>
-        <p>This is an Holberton School Project. All rights reserved.</p>
+        <p><em>This is an Holberton School Project. All rights reserved.</em></p>
     </footer>
     <script src="scripts.js"></script>
 </body>
