--- a/base_file/place.html
+++ b/base_file/place.html
@@ -1,59 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Place Details</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
+<!-- Body -->
 <body>
     <header>
         <img src="images/logo.png" alt="Logo" class="logo">
         <nav>
-        <a href="login.html" class="login-button">Login</a>
-        <a href="index.html" id="inicio-link" class="inicio-button">Home</a>
+            <a href="login.html" id="login-link" class="login-button">Login</a>
+            <a href="index.html">Home</a>
         </nav>
     </header>
+
     <main>
         <section id="place-details" class="place-details">
-            <h2>Playa Pesquero</h2>
-            <img src="images/place1.jpg" alt="place1 Image" class="place-image-large">
-            <!--The info of the place-->
+            <img src="images/place1.jpg" alt="Place 1" class="place-image-large">
             <div class="place-info">
-                <h2><strong>John Doe:</strong></h2>
-                <p>Price: $100 per night</p>
-                <p>Location: Cuba</p>
-                <p>Description: A wonderful Hotel in a wonderful place.</p>
-                <p>Amenities: WiFi, Pool, Gym, Spa, Beach...</p>
+                <h2>Pesquero Beach</h2>
+                <p>Host: Sky Company</p>
+                <p>Price per night: $150</p>
+                <p>Location: Holguin, Cuba</p>
+                <div>
+                    <p>A wonderful hotel, with relaxing and funny places, all you are looking for..</p>
+                    <h3>Amenities</h3>
+                    <ul>
+                        <li>Wi-fi</li>
+                        <li>Pool</li>
+                        <li>Free Parking</li>
+                        <li>Breakfast</li>
+                        <li>Bar</li>
+                        <li>Restaurants</li>
+                        <li>Spa</li>
+                        <li>Beach</li>
+                        <li>Room Service</li>
+                        <li>Laundry</li>
+                        <li>Air Conditioning</li>
+                    </ul>
+                </div>
             </div>
+
+            <!-- Place details will be populated dynamically -->
         </section>
-        <!--Reviews section-->
-        <section id="reviews">
-            <a href="add_review.html"><button>Add a Review</a>
-        </section>
+
+        <!-- Reviews section -->
+        <section id="reviews" class="reviews">
+            <h3>Reviews</h3>
             <div class="review-card">
-                <p><strong>Comment:</strong> Mijn oprechte respect, een luxe hotel.</p>
-                <p><strong>User:</strong>Mr. Whelmoed</p>
-                <p>Rating: 5.0</p>
+                <p>Reviewer: Frank Kafka</p>
+                <p>Comment: Excellent services!</p>
+                <p>Rating: 5/5 stars</p>
             </div>
             <div class="review-card">
-                <p><strong>Comment:</strong> Het is een prachtige plek, vol leven, met prachtige stranden, een prachtig uitzicht, uitstekende service, onstuitbare voorzieningen.</p>
-                <p>User: Mr. Whelmoed</p>
-                <p>Rating: 5.0</p>
+                <p>Reviewer: Jasson Statan</p>
+                <p>Comment: A very comfortable place, I'm the transportator.</p>
+                <p>Rating: 5/5 stars</p>
+            </div>
+            <div class="review-card">
+                <p>Reviewer: Mc Grey</p>
+                <p>Comment: Ulah laah se magnific</p>
+                <p>Rating: 5/5</p>
             </div>
         </section>
-        <section id="add-review">
+
+        <!-- Reviews will be populated dynamically -->
+        <section id="add-review" class="add-review">
             <h2>Add a Review</h2>
-            <form id="review-form" class="add-review">
+            <form id="review-form">
                 <label for="review-text">Review:</label>
                 <textarea id="review-text" name="review-text" required></textarea>
-                <button type="submit">Submit</button>
+                <label for="review-rating">Rating:</label>
+                <select id="review-rating" name="review-rating" required>
+                    <option value="1">1 star</option>
+                    <option value="2">2 stars</option>
+                    <option value="3">3 stars</option>
+                    <option value="4">4 stars</option>
+                    <option value="5">5 stars</option>
+                </select>
+                <button type="submit">Submit Review</button>
             </form>
         </section>
     </main>
-    <script src="scripts.js"></script>
+
     <footer>
-        <p><em>This is a Holberton School project. All rights reserved.</em></p>
+        <p>&copy; 2024 All rights reserved</p>
     </footer>
+
+    <script src="static/scripts.js"></script>
 </body>
+
 </html>
